# proXo

./: .gitignore  CMakeLists.txt  Makefile  README.md  _clang-format  main.cpp
core/common/: Pool.cpp  Pool.h  SceneToPool.cpp  SceneToPool.h
core/config/: global.h
core/math/: Matrix.cpp  Matrix.h  TransformationMatrix.cpp  basics.cpp  basics.h  inv_sqrt.cpp  inv_sqrt.h  type.h  vector.h
core/model/: Camera.cpp  Camera.h  Container.cpp  Container.h  Light.cpp  Light.h  Material.cpp  Material.h  Object.cpp  Object.h  Scene.cpp  Scene.h  Skybox.h  Texture.h  TexturePool.h  TransformationStack.cpp  TransformationStack.h
core/model/light/: Ambient.cpp  Ambient.h  Point.cpp  Point.h  Spot.cpp  Spot.h  Sun.cpp  Sun.h
core/raytracer/: Intersection.cpp  Intersection.h  KDTree.cpp  KDTree.h  RayTracer.cpp  RayTracer.h
core/realtime/: Buffer.cpp  Buffer.h  Engine.cpp  Engine.h  Rasterizer.cpp  Rasterizer.h
core/sys/: Multithreading.h
media/: model.scene  parc.scene
media/parc/: bench2.ply  grass.ply  ground.ply  puddle.ply  shelf.ply  sphere.ply  street_lamp.ply  stump.ply  swing.ply  swing_ring.ply  swing_rope.ply  swing_seat.ply  vase.ply  water_vase.ply
parser/: SceneParser.cpp  SceneParser.h  StanfordParser.cpp  StanfordParser.h
result/: README.md
sdl/: CameraController.cpp  CameraController.h  wrapper.cpp  wrapper.h
src/core/common/: Buffer.h  Pool.cpp  Pool.h  SceneToPool.cpp  SceneToPool.h
src/core/config/: global.h
src/core/math/: Matrix.cpp  Matrix.h  TransformationMatrix.cpp  Vector.h  basics.h  inv_sqrt.h  type.h
src/core/model/: Camera.cpp  Camera.h  Container.cpp  Container.h  Light.cpp  Light.h  Material.cpp  Material.h  Object.cpp  Object.h  Scene.cpp  Scene.h  Skybox.h  Texture.cpp  Texture.h  TexturePool.h  TransformationStack.cpp  TransformationStack.h
src/media/: model.scene
src/parser/: SceneParser.cpp  StanfordParser.cpp  StanfordParser.h
src/sample/: main.cpp
src/sdl/: CameraController.cpp  CameraController.h  wrapper.cpp
(+49 files in other folders)
